# df-feature-store

./: Makefile  README.md  pyproject.toml
fs_app/feature_repo/: example_repo.py  feature_store.yaml
fs_app/feature_repo/data/: driver_stats.parquet
