[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fs_app"
version = "0.0.1"
authors = [
  { name="Rajakumaran Arivumani", email="author@example.com" },
]
description = "Feature store app package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]
dependencies = [
  # app specific 
  "feast==0.45.0",
  # my packages
  "utils @ git+https://github.com/dexplorer/utils",
  "metadata @ git+https://github.com/dexplorer/df-metadata",
  "app_calendar @ git+https://github.com/dexplorer/df-app-calendar",
  "config @ git+https://github.com/dexplorer/df-config",
]
keywords = ["feature", "store", "fe", "ml", "framework", "model", "training", "inference"]

[project.optional-dependencies]
api = [
  "fastapi" , 
  "uvicorn[standard]", 
  ]
cli = [
  "click",
]
test = [
  # standard dev tools
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "ipython",
]

[project.scripts]
fs-app-cli = "fs_app.fs_app_cli:main"
fs-app-api = "fs_app.fs_app_api:main"

[project.urls]
Homepage = "https://profile.rajakumaran.in"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dexplorer/df-feature-store.git"
Issues = "https://github.com/dexplorer/df-feature-store/issues"
Changelog = "https://github.com/dexplorer/df-feature-store/blob/master/CHANGELOG.md"
